# micrus

./: Cargo.toml  README.md  bootimage.json  x86_64-micrus.json
.cargo/: config.toml
src/: lib.rs  main.rs
src/filesystem/: constants.rs  directory.rs  file.rs  file_system.rs
src/graphics/: color.rs  constants.rs  screen_char.rs  vga.rs  vga_buffer.rs
src/input/: keyboard.rs
src/interrupts/: constants.rs  descriptor_table.rs  fault_handlers.rs  panic.rs  shutdown.rs
src/messaging/: boot.rs  print.rs
src/system/: modules.rs  shell.rs
